--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h1>
-		TEST
-		</h1>
+		<h1>Test</h1>
+		<nav>
+			<ul>
+				<li>About</li>
+				<li>Officers</li>
+				<li>Projects</li>
+				<li>Conatct</li>
+			</ul>
+		</nav>
 	</body>
 </html>
