--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link href='http://fonts.googleapis.com/css?family=Advent+Pro:600' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<h1>Test</h1>
 		<nav>
 			<ul>
-				<li>About</li>
-				<li>Officers</li>
-				<li>Projects</li>
-				<li>Conatct</li>
+				<li class="about"><a  href="#">About</a></li>
+				<li class="officers" ><a href="#">Officers</a></li>
+				<li class="projects"><a  href="#">Projects</a></li>
+				<li  class="contact"><a href="#">Conatct</a></li>
 			</ul>
 		</nav>
+		<div class="announcements-stream">
+			<div>
+		</div>	
 	</body>
 </html>
