--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
 					<div class="announcement-avatar"></div> 
 					<div class="announcement-title">TEST</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				<p class="announcement-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Cras pretium tristique urna, cursus imperdiet turpis feugiat scelerisque. Duis eget rutrum tortor. 
+					Nunc lobortis elit pretium nibh accumsan, at facilisis libero vehicula. 
+					Morbi gravida nec tortor et fringilla. Aenean ut sem gravida, hendrerit elit at, egestas urna. 
+					Curabitur rutrum mauris quis vulputate ultrices. Donec lectus purus, sagittis sed magna vel, pretium vestibulum magna.
+				</p>
+			</div>
+			<div class="announcement-card">
+				<div class="announcement-header">
+					<div class="announcement-avatar"></div> 
+					<div class="announcement-title">TEST</div>
+				</div>
+				<p class="announcement-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Cras pretium tristique urna, cursus imperdiet turpis feugiat scelerisque. Duis eget rutrum tortor. 
 					Nunc lobortis elit pretium nibh accumsan, at facilisis libero vehicula. 
 					Morbi gravida nec tortor et fringilla. Aenean ut sem gravida, hendrerit elit at, egestas urna. 
