--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<li class="about"><a  href="#">About</a></li>
 				<li class="officers" ><a href="#">Officers</a></li>
 				<li class="projects"><a  href="#">Projects</a></li>
-				<li  class="contact"><a href="#">Conatct</a></li>
+				<li  class="contact"><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="announcements-stream">
