--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link href='http://fonts.googleapis.com/css?family=Advent+Pro:600' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<!-- AngularJS -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<!-- Firebase -->
+		<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+		<!-- AngularFire -->
+		<script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+		<script src="main.js"></script>
+		<title>OHS Computer Science Club</title>
 	</head>
-	<body>
+	<body ng-app="ohs-cs-club">
 		<nav>
 			<ul>
 				<li class="about"><a  href="#">About</a></li>
@@ -13,31 +22,14 @@
 				<li  class="contact"><a href="#">Contact</a></li>
 			</ul>
 		</nav>
-		<div class="announcements-stream">
-			<div class="announcement-card">
+		<div class="announcements-stream" ng-controller="Announcements-Controller">
+			<div class="announcement-card" ng-repeat="a in announcements">
 				<div class="announcement-header">
-					<div class="announcement-avatar"></div> 
-					<div class="announcement-title">TEST</div>
+					<div class="announcement-avatar" back-img="{{a.test}}"></div> 
+					<div class="announcement-title">{{a.title}} {{a.test}}</div>
 				</div>
-				<p class="announcement-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Cras pretium tristique urna, cursus imperdiet turpis feugiat scelerisque. Duis eget rutrum tortor. 
-					Nunc lobortis elit pretium nibh accumsan, at facilisis libero vehicula. 
-					Morbi gravida nec tortor et fringilla. Aenean ut sem gravida, hendrerit elit at, egestas urna. 
-					Curabitur rutrum mauris quis vulputate ultrices. Donec lectus purus, sagittis sed magna vel, pretium vestibulum magna.
-				</p>
+				<p class="announcement-body">{{a.body}}</p>
 			</div>
-			<div class="announcement-card">
-				<div class="announcement-header">
-					<div class="announcement-avatar"></div> 
-					<div class="announcement-title">TEST</div>
-				</div>
-				<p class="announcement-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Cras pretium tristique urna, cursus imperdiet turpis feugiat scelerisque. Duis eget rutrum tortor. 
-					Nunc lobortis elit pretium nibh accumsan, at facilisis libero vehicula. 
-					Morbi gravida nec tortor et fringilla. Aenean ut sem gravida, hendrerit elit at, egestas urna. 
-					Curabitur rutrum mauris quis vulputate ultrices. Donec lectus purus, sagittis sed magna vel, pretium vestibulum magna.
-				</p>
-			</div>
-		</div>	
+		</div>
 	</body>
 </html>
